--- a/public/manifest.json
+++ b/public/manifest.json
@@ -452,7 +452,7 @@
         }
     ],
     "start_url": "/",
-    "scope": "https://app.kaytu.io/",
+    "scope": "https://app.opengovernance.io/",
     "display": "standalone",
     "theme_color": "#0D2239",
     "background_color": "#F3F4F6",
